--- a/src/drivers/Makefile.am
+++ b/src/drivers/Makefile.am
@@ -35,4 +35,8 @@ if USE_PGSQL
 PGSQL_DIR = pgsql
 endif
 
-SUBDIRS = $(MYSQL_DIR) $(ORACLE_DIR) $(PGSQL_DIR) $(DRIZZLE_DIR) $(ATTACHSQL_DIR)
+if USE_COMDB2
+COMDB2_DIR = comdb2
+endif
+
+SUBDIRS = $(MYSQL_DIR) $(ORACLE_DIR) $(PGSQL_DIR) $(DRIZZLE_DIR) $(ATTACHSQL_DIR) $(COMDB2_DIR)
