Add config options for Comdb2.

--- a/configure.ac
+++ b/configure.ac
@@ -276,10 +276,9 @@ AM_CONDITIONAL(USE_PGSQL, test x$with_pgsql != xno)
 AC_SUBST([USE_PGSQL])
 
 AS_IF([test x$with_comdb2 != xno], [
+    AC_CHECK_COMDB2([$with_comdb2])
+    USE_COMDB2=1
     AC_DEFINE(USE_COMDB2,1,[Define to 1 if you want to compile with Comdb2 support])
-    COMDB2_LIBS="-L/opt/bb/lib -l:libcdb2api.a -lssl -lcrypto -lprotobuf-c \
-        -lunwind"
-    COMDB2_CFLAGS="-I/opt/bb/include"
     AC_SUBST([COMDB2_LIBS])
     AC_SUBST([COMDB2_CFLAGS])
 ])
