--- a/src/lua/Makefile.am
+++ b/src/lua/Makefile.am
@@ -18,6 +18,7 @@ SUBDIRS = internal
 
 dist_pkgdata_SCRIPTS = bulk_insert.lua \
              oltp_delete.lua \
+             oltp_delete_insert.lua \
              oltp_insert.lua \
              oltp_read_only.lua \
              oltp_read_write.lua \
